--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.0
 
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
